--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
     "xml-loader": "^1.2.1"
+  },
+  "dependencies": {
+    "js-base64": "^2.4.6"
   }
 }
